--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- <link rel="web icon" href="https://cutewallpaper.org/24/ai-png/artificial-intelligence-ai-icon-png-and-svg-vector-free-download.png"> -->
+    <!-- <link rel="web icon" href="https://www.pngmart.com/files/21/AI-PNG-HD.png"> -->
+    <!-- <link rel="web icon" href="https://www.pngmart.com/files/21/AI-PNG-Isolated-File.png"> -->
+    
+    <link rel="web icon" href="https://www.freeiconspng.com/thumbs/artificial-intelligence-icon-png/artificial-intelligence-png-11.png">
+      <!-- this is best👆 -->
+    <title>BG Remover AI by NíL</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -69,7 +75,7 @@
 
     <!-- <input type="file"  id="input-Img" /> -->
 
-    <!-- <footer>
+    <!-- <footer id="footer-main">
       <div id="footer">
         <h2>Made By Developer NíL </h2>
       </div>
